# Halcon_Matlab

./: CMakeLists.txt  README.md
3rd/matlab/include/: covrt.h  emlrt.h  fintrf.h  matrix.h
3rd/matlab/include/AsyncIO/: asynciocoder_api.hpp
3rd/matlab/include/MatlabDataArray/: ArrayFactory.hpp  ArrayType.hpp  ArrayVisitors.hpp  CharArray.hpp  Exception.hpp  GetArrayType.hpp
3rd/matlab/include/MatlabDataArray/detail/: ExceptionHelpers.hpp  FunctionType.hpp  StringHelpers.hpp
3rd/matlab/include/MatlabEngine/detail/: engine_execution_interface_impl.hpp
3rd/matlab/include/MatlabExecutionInterface/: execution_interface.hpp
3rd/matlab/include/sl_AsyncioQueue/: AsyncioQueueCAPI.h  AsyncioQueueCTypes.h
3rd/matlab/lib/win64/microsoft/: SimulinkBlock.lib  asynciocoder.lib  display_core.lib  gpumexbinder.lib  imagesdatatypescodegenc.lib  imagesdatatypescodegenmexutils.lib  imagesdatatypesimage.lib  imagesdatatypesopencvutils.lib  libMatlabDataArray.lib  libMatlabEngine.lib  libcovrt.lib  libemlrt.lib  libfixedpoint.lib  libmat.lib  libmex.lib  libmwblas.lib  libmwblascompat32.lib  libmwboxfilter.lib  libmwboxfilter3.lib  libmwbwdistEDT.lib  libmwbwdistEDTFT.lib  libmwbwdistEDTFT_tbb.lib  libmwbwdistEDT_tbb.lib  libmwbwlookup.lib  libmwbwlookup_tbb.lib  libmwbwpackc.lib  libmwbwpackctbb.lib  libmwbwunpackc.lib  libmwbwunpackctbb.lib  libmwcannythresholding_tbb.lib  libmwcgir_construct.lib  libmwcgxert.lib  libmwddist.lib  libmwdnn_instrumentation.lib  libmwdsp_halidesim.lib  libmwedgesobelprewitt_tbb.lib  libmwedgethinning_tbb.lib  libmwgetnumcores.lib  libmwgrayto16.lib  libmwgrayto8.lib  (+47 more)
3rd/matlab/lib/win64/mingw64/: SimulinkBlock.lib  asynciocoder.lib  display_core.lib  fortran_exportsmexfileversion.def  gpumexbinder.lib  imagesdatatypescodegenc.lib  imagesdatatypescodegenmexutils.lib  imagesdatatypesimage.lib  imagesdatatypesopencvutils.lib  libMatlabDataArray.lib  libMatlabEngine.lib  libcovrt.lib  libemlrt.lib  libeng.lib  libfixedpoint.lib  libmat.lib  libmex.lib  libmwblas.lib  libmwblascompat32.lib  libmwboxfilter.lib  libmwboxfilter3.lib  libmwbwdistEDT.lib  libmwbwdistEDTFT.lib  libmwbwdistEDTFT_tbb.lib  libmwbwdistEDT_tbb.lib  libmwbwlookup.lib  libmwbwlookup_tbb.lib  libmwbwpackc.lib  libmwbwpackctbb.lib  libmwbwunpackc.lib  libmwbwunpackctbb.lib  libmwcannythresholding_tbb.lib  libmwcgir_construct.lib  libmwcgxert.lib  libmwddist.lib  libmwdnn_instrumentation.lib  libmwdsp_halidesim.lib  libmwedgesobelprewitt_tbb.lib  libmwedgethinning_tbb.lib  libmwgetnumcores.lib  (+49 more)
def/: Halcon_Matlab.def
doc/html/reference/: HHalconMatlab.html  Matlab_engClose.html  Matlab_engEvalString.html  Matlab_engGetVariable.html  index_classes.html  toc_userextensions.html
examples/: createFit.m  matlab.hdev
help/: operators_en_US.num
include/: Halcon_Matlab.h
source/: Halcon_Matlab.c  Halcon_Matlab.cpp
